--- a/frontend/here_law/index.html
+++ b/frontend/here_law/index.html
@@ -5,7 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-
+    <script
+      type="text/javascript"
+      src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=4228cd9016227d04d89940599652bee1&libraries=services"
+    ></script>
     <title>Vite + React</title>
   </head>
   <body>
